<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FinancialManagement</string>
    <string name="button_day_string">DAY</string>
    <string name="button_week_string">WEEK</string>
    <string name="button_month_string">MONTH</string>
    <string name="button_period_string">PERIOD</string>
    <string name="assets_label">ASSETS</string>
    <string name="current_assets_label">CURRENT</string>
    <string name="expected_assets_label">EXPECTED</string>
    <string name="open_assets_graphs_page">Open assets graphs page</string>
    <string name="open_add_financial_movement_page">Open add financial movement page</string>
    <string name="open_registered_movements_page">Open registered movements page</string>
    <string name="open_incoming_movements_page">Open incoming movements page</string>
    <string name="no_categories_to_select">No categories to select</string>
    <string name="current_on_max_budget">%.2f/%.2f€</string>
    <string name="euro_value">%.2f€</string>
    <string name="number_decimal">%.2f</string>
    <string name="error_no_date">Date input is empty</string>
    <string name="error_null_or_negative_amount">Movement amount must be greater than zero</string>
    <string name="error_no_category">Category input is empty</string>
    <string name="error_no_title">Title field can\'t be empty</string>
    <string name="open_edit_current_category">Open edit current category</string>
    <string name="open_add_a_new_financial_movement">Open add a new financial movement</string>
    <string name="go_back_to_previous_screen">Go back to previous screen</string>
    <string name="open_add_new_category_to_comparison">Open add new category to comparison</string>
    <string name="loading_data">Loading data</string>
    <string name="success_movement_update">Updated movement</string>
    <string name="success_add_category">Created new category</string>
    <string name="success_edit_category">Applied changes to the category</string>
    <string name="error_no_data_in_period">Can\'t find any movement in the selected period</string>
    <string name="incomes">Incomes</string>
    <string name="assets">Assets</string>
    <string name="expenses">Expenses</string>
    <string name="graph_label_now">Now</string>
    <string name="graph_label_current">Current</string>
    <string name="graph_label_week" tools:ignore="PluralsCandidate">-%d weeks</string>
    <string name="success_incoming_to_movement">Created movement with new date</string>
    <string name="success_movement_to_incoming">Created new movement in the future</string>
    <string name="success_update_periodic">Updated periodic movement</string>
    <string name="success_create_periodic">Created periodic movement</string>
    <string name="success_create_incoming">Created movement in the future</string>
    <string name="success_create_movement">Created movement</string>
    <string name="group_by_day">Group by day</string>
    <string name="group_by_week">Group by week</string>
    <string name="delete_movement_confirmation_message">Are you sure you want to delete%s movement with date %s and title: %s ?</string>
    <string name="periodic">periodic</string>
    <string name="success_delete_movement">Deleted movement</string>
    <string name="success_delete_periodic">Deleted periodic movement</string>
    <string name="confirm_incoming_confirmation_message">Are you sure you want to confirm movement on date %s with title: %s ?</string>
    <string name="success_confirmed_incoming">Movement confirmed</string>
    <string name="channel_name">Incoming movements</string>
    <string name="channel_description">Movements for which the user has requested a reminder and need to be confirmed</string>
    <string name="notification_title">%s - %s - %s</string>
    <string name="notification_new_incoming">New movement to confirm</string>
    <string name="abort_creating_new_category">Abort creating new category</string>
    <string name="confirm_creating_new_category">Confirm creating new category</string>
    <string name="open_create_new_category">Open create new category</string>
    <string name="abort_creating_new_movement">Abort creating new movement</string>
    <string name="confirm_creation_of_new_movement">Confirm creation of new movement</string>
    <string name="delete_current_showing_movement">Delete current showing movement</string>
    <string name="edit_current_showing_movement">Edit current showing movement</string>
    <string name="abort_editing_current_showing_movement">Abort editing current showing movement</string>
    <string name="confirm_changes_of_current_showing_movement">Confirm changes of current showing movement</string>
    <string name="select_categories">Select categories</string>
    <string name="new_capital">NEW</string>
    <string name="zero">0.00</string>
    <string name="euro_symbol">€</string>
    <string name="income">Income</string>
    <string name="date_capital">DATE</string>
    <string name="category_capital">CATEGORY</string>
    <string name="title_capital">TITLE</string>
    <string name="notes_capital">NOTES</string>
    <string name="notify_capital">NOTIFY</string>
    <string name="periodic_capital">PERIODIC</string>
    <string name="repeat_every_capital">REPEAT EVERY</string>
    <string name="days_colon">DAYS:</string>
    <string name="months_colon">MONTHS:</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="add_new_category_capital">ADD NEW CATEGORY</string>
    <string name="name_capital">NAME</string>
    <string name="color_capital">COLOR</string>
    <string name="daily_budget_capital">DAILY BUDGET</string>
    <string name="cancel_capital">@android:string/cancel</string>
    <string name="confirm_capital">CONFIRM</string>
    <string name="assets_trend_capital">ASSETS TREND</string>
    <string name="budget">Budget</string>
    <string name="expense">Expense</string>
    <string name="compare_with_capital">COMPARE WITH</string>
    <string name="expenses_capital">EXPENSES</string>
    <string name="incomes_capital">INCOMES</string>
    <string name="confirm_incoming_movement_capital">CONFIRM INCOMING MOVEMENT</string>
    <string name="confirm_movement_deletion_capital">CONFIRM MOVEMENT DELETION</string>
    <string name="edit_category_capital">EDIT CATEGORY</string>
    <string name="edit_current_assets_capital">EDIT CURRENT ASSETS</string>
    <string name="edit_capital">EDIT</string>
    <string name="incoming_capital">INCOMING MOVEMENTS</string>
    <string name="zero_euros">0.00€</string>
    <string name="expense_budget_progress">EXPENSE/BUDGET PROGRESS</string>
    <string name="registered_movements_capital">REGISTERED MOVEMENTS</string>
    <string name="delete_capital">DELETE</string>
    <string name="select_categories_for_comparison">Select categories for comparison</string>
    <string name="no_categories_to_show">No category to show</string>
    <string name="open_periodic_movements_page">Open periodic movements page</string>
    <string name="periodic_movements_capital">PERIODIC MOVEMENTS</string>
    <string name="open_categories_list_page">Open categories list page</string>
    <string name="this_movement_is_periodic">This movement is periodic</string>
    <string name="budgets_capital">BUDGETS</string>
    <string name="assets_graphs_capital">ASSETS GRAPHS</string>
    <string name="category_details_capital">CATEGORY DETAILS</string>
    <string name="select_period">Select period</string>
    <string name="select_date">Select a date</string>
    <string name="error_no_periodicity">Periodic is checked but no repetition was given</string>
    <string name="of_the_next_two_weeks">Of the next 2 weeks</string>
    <string name="of_the_next_four_weeks">Of the next 4 weeks</string>
    <string name="of_the_next_five_months">Of the next 5 months</string>
    <string name="group_by_month">Group by month</string>
    <string name="assets_at_start_capital">ASSETS AT START</string>
    <string name="assets_at_end_capital">ASSETS AT END</string>
    <string name="confirm_existing_category_edit">There is already a category called \"%s\". If you confirm, all the movements of the two colliding categories will be merged, otherwise you can cancel and choose another name.</string>
    <string name="category_already_exists_capital">CATEGORY ALREADY EXISTS</string>
    <string name="error_category_conflict_not_found">Category not found even if there\'s conflict on name</string>
    <string name="error_category_already_exists">Category %s already exists</string>
    <string name="pie_chart_center_first_text">BUDGET LEFT</string>
    <string name="pie_chart_center_third_text">of %d€</string>
    <string name="pie_chart_center_second_text">%d€</string>
</resources>