<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:id="@+id/addFinMovLayout"
    tools:context=".fragments.AddFinancialMovementFragment"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/txtTitle"
        android:text="@string/select_categories"
        android:textColor="@color/dark_10"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/all_rounded_15_style"
        android:backgroundTint="@color/dark_10"
        android:contentDescription="@string/select_categories_for_comparison"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">

        <LinearLayout
            android:id="@+id/categoryListContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="55dp"
            android:clickable="true"
            app:useCompatPadding="true"
            android:backgroundTint="@color/dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:focusable="true"
            android:contentDescription="@string/open_add_a_new_financial_movement" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabCustomSize="36dp"
            app:useCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/dark_10"
            app:backgroundTint="@color/dark"
            app:tint="@color/dark"
            app:borderWidth="2dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:focusable="true"
            android:contentDescription="@string/go_back_to_previous_screen" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>