<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisteredMovementsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:text="@string/incoming_capital"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/txtSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtTitle"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="17dp">

                <Button
                    android:id="@+id/btnDay"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:text="@string/button_day_string"
                    android:textSize="12sp"
                    android:padding="0dp"
                    app:backgroundTint="@color/dark_10"
                    android:textColor="@drawable/btn_colors"
                    android:background="@drawable/btn_round_left_style"
                    app:layout_constraintEnd_toStartOf="@+id/btnWeek"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnWeek"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:text="@string/button_week_string"
                    android:textSize="12sp"
                    android:padding="0dp"
                    android:background="@drawable/not_rounded_style"
                    app:backgroundTint="@color/dark_10"
                    android:textColor="@drawable/btn_colors"
                    app:layout_constraintEnd_toStartOf="@+id/btnMonth"
                    app:layout_constraintStart_toEndOf="@+id/btnDay"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnMonth"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:text="@string/button_month_string"
                    android:textSize="12sp"
                    android:padding="0dp"
                    android:background="@drawable/not_rounded_style"
                    app:backgroundTint="@color/dark_10"
                    android:textColor="@drawable/btn_colors"
                    app:layout_constraintEnd_toStartOf="@+id/btnPeriod"
                    app:layout_constraintStart_toEndOf="@+id/btnWeek"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnPeriod"
                    android:background="@drawable/btn_round_right_style"
                    app:backgroundTint="@color/dark_10"
                    android:textColor="@drawable/btn_colors"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:text="@string/button_period_string"
                    android:textSize="12sp"
                    android:padding="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnMonth"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/movementCardsContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="17dp"
                android:orientation="vertical" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="55dp"
            android:clickable="true"
            app:useCompatPadding="true"
            android:backgroundTint="@color/dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:focusable="true"
            android:contentDescription="@string/open_add_a_new_financial_movement" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabCustomSize="36dp"
            app:useCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/dark_10"
            app:backgroundTint="@color/dark"
            app:tint="@color/dark"
            app:borderWidth="2dp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:focusable="true"
            android:contentDescription="@string/go_back_to_previous_screen" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>