<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="45dp"
    android:paddingEnd="45dp"
    android:paddingTop="35dp"
    android:paddingBottom="40dp"
    android:background="@drawable/all_rounded_20_style"
    android:backgroundTint="@color/white"
    tools:context=".fragments.ConfirmExistingCategoryEditDialog">

    <TextView
        android:id="@+id/txtConfirmEdit"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/category_already_exists_capital"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/layoutConfirmEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/txtConfirmEdit"
        android:gravity="center">
        <TextView
            android:id="@+id/txtConfirmationMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutConfirmEdit">
        <Button
            android:id="@+id/btnAbortEdit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="0dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_marginEnd="3dp"
            android:background="@drawable/all_rounded_10_style"
            app:backgroundTint="@color/dark"
            android:text="@string/cancel_capital"
            app:layout_constraintEnd_toStartOf="@+id/btnConfirmEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnConfirmEdit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="0dp"
            android:textSize="12sp"
            android:layout_marginStart="3dp"
            android:textColor="@color/white"
            android:background="@drawable/all_rounded_10_style"
            app:backgroundTint="@color/primary"
            android:text="@string/confirm_capital"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAbortEdit"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>