<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:id="@+id/spaceMain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="50dp"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="August 2022"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toStartOf="@id/imgBtnGraphs"
                app:layout_constraintStart_toEndOf="@id/spaceMain"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/imgBtnGraphs"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="?attr/actionModeShareDrawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

            <Button
                android:id="@+id/btnDay"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_day_string"
                app:layout_constraintEnd_toStartOf="@+id/btnWeek"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnWeek"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_week_string"
                app:layout_constraintEnd_toStartOf="@+id/btnMonth"
                app:layout_constraintStart_toEndOf="@+id/btnDay"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnMonth"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_month_string"
                app:layout_constraintEnd_toStartOf="@+id/btnPeriod"
                app:layout_constraintStart_toEndOf="@+id/btnWeek"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnPeriod"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_period_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnMonth"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtAssets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/assets_label" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_assets_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtExpected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expected_assets_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCurrentValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="1234,56€"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCurrent" />

            <TextView
                android:id="@+id/txtExpectedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="2000,00€"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtExpected" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- <androidx.constraintlayout.utils.widget.MockView
            android:id="@+id/mockView"
            android:layout_width="match_parent"
            android:layout_height="300dp" /> -->

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChartMain"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp">

        </com.github.mikephil.charting.charts.PieChart>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp">
            <LinearLayout
                android:id="@+id/categoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </ScrollView>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="55dp"
            android:layout_margin="13dp"
            android:clickable="true"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabRegisteredMovements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            app:fabCustomSize="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="?android:attr/actionModeFindDrawable"
            android:focusable="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabIncomingMovements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            app:fabCustomSize="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="?android:attr/actionModeFindDrawable"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>